--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:weightSum="10">
+    android:weightSum="11">
 
     <ListView
         android:layout_width="match_parent"
@@ -21,5 +21,13 @@
         android:id="@+id/btnTambah"
         android:text="Tambah Data"
         android:layout_weight="1"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#F00"
+        android:id="@+id/btnHapus"
+        android:text="Hapus Data"
+        android:layout_weight="1"/>
+
 
 </LinearLayout>
